banner, products, package, animations, navigation fixes

--- a/scss/layouts/_content.scss
+++ b/scss/layouts/_content.scss
@@ -1,11 +1,18 @@
 .content {
-    padding: 1rem 2rem;
+    padding: 5rem 2rem;
+    max-width: 1200px;
+    overflow: hidden;
 }
 
 @include md {
-    padding: 1rem 3rem;
+    .content {
+        padding: 5rem 3rem;
+    }
 }
 
 @include lg {
-    padding: 1rem 0rem;
+    .content {
+        padding: 6rem 3rem;
+        margin: auto;
+    }
 }
