--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $black: #000;
 
 $silver: rgba(44, 61, 73, 0.03);
 $hover-red: #a71a63;
-$linear-gradient: 143deg,#a71a63 3.69%,#d65197 38.59%,#f8c0a6 69.31%,#eedc82 98.89%;
+$linear-gradient-pink: 143deg,#a71a63 3.69%,#d65197 38.59%,#f8c0a6 69.31%,#eedc82 98.89%;
+$linear-gradient-green: 0deg, rgba(83,175,95,1) 0%, rgba(209,226,110,1) 100%;
 $pink: #d65197;
 $green: #6cca98;
