--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', Helvetica, sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
     line-height: 1.8;
