--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -34,14 +34,44 @@
             width: 40%;
         }
     }
-    
+    &__desc {
+        overflow: hidden;
+        height: 60px;
+    }
+    &__desc-item {
+        line-height: 2;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        list-style: none;
+        font-weight: bold;
+        position: relative;
+        top: 0;
+        animation: slide 12s steps(2) infinite;
+        span {
+            position: relative;
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                background: $white;
+                animation: typing 6s steps(30) infinite;
+            }
+        }
+    }
 }
 
 @include md {
     .banner {
         &__heading {
             font-size: 1.5rem;
-            
+        }
+        &__desc {
+            height: 70px;
+        }
+        &__desc-item {
+            font-size: 2.5rem;
         }
     }
 }
@@ -55,9 +85,12 @@
         }
         &__heading {
             font-size: 2rem;
-            margin-top: -100px;
-            position: relative;
-            z-index: 5;
+        }
+        &__desc {
+            height: 100px;
+        }
+        &__desc-item {
+            font-size: 3.5rem;
         }
     }
 }
