--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -1,5 +1,8 @@
 .section {
     margin: 5rem 0 10rem;
+    &:last-of-type {
+        margin: 5rem 0 0;
+    }
     &__title {
         font-size: 1.75rem;
         text-transform: uppercase;
@@ -9,25 +12,24 @@
             font-weight: bold;
         }
         &::before {
-            content: "The Story";
             text-transform: uppercase;
             position: absolute;
             top: 1.25rem;
             left: 0;
             opacity: 0.1;
-            font-size: 2.5rem;
+            font-size: 3rem;
             font-weight: bold;
             line-height: 1;
         }
     }
-    &__promise {
+    &__desc {
         margin-bottom: 3rem;
     }
     &__line {
         width: calc(100% + 32px);
         height: 3px;
-        background: linear-gradient($linear-gradient-pink);
         margin-bottom: 2rem;
+        background: $pink;
     }
     &__image {
         position: relative;
@@ -41,6 +43,87 @@
         left: 0;
         transform: translate(0px, -50%);
         animation: toRight 4s linear infinite alternate;
+    }
+    &__subtitle {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+    }
+}
+
+.contact-form {
+    padding: 2rem 0;
+    margin: 2rem 0;
+    &__txt-field {
+        position: relative;
+        border-bottom: 1px solid $silver;
+        margin-bottom: 1.5rem;
+        input:focus ~ label,
+        input:valid ~ label {
+            top: -5px;
+        }
+    }
+    &__input {
+        width: 100%;
+        border: none;
+        outline: none;
+        background: none;
+        padding: 0.5rem;
+
+    }
+    &__label {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        color: $silver;
+        transform: translateY(-50%);
+        pointer-events: none;
+        padding-left: 0.5rem;
+        transition: top 0.5s;
+    }
+    &__submit {
+        padding: 0.5rem 1rem;
+        background: $black;
+        color: $white;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+        outline: none;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+.story {
+    .section {
+        &__title::before {
+            content: "The Story";
+        }
+        &__line {
+            background: linear-gradient($linear-gradient-pink);
+        }
+    }
+}
+.find-us {
+    .section {
+        &__title::before {
+            content: "Find Us";
+        }
+        &__line {
+            background: linear-gradient($linear-gradient-green);
+        }
+    }
+}
+.contact {
+    .section {
+        &__title::before {
+            content: "Contact";
+        }
+        &__line {
+            background: linear-gradient($linear-gradient-green);
+        }
     }
 }
 
@@ -57,6 +140,11 @@
             width: calc(100% + 80px);
         }
     }
+    .contact-form {
+        &__txt-field {
+            font-size: 1.25rem;
+        }
+    }
 }
 
 @include lg {
@@ -64,8 +152,8 @@
         @include flex($justify-content: center);
         &__title {
             &::before {
-                font-size: 8rem;
-                top: -2rem;
+                font-size: 6rem;
+                top: 0;
                 left: -3rem;
             }
         }
@@ -73,12 +161,25 @@
             width: 200%;
             max-width: 1200px;
         }
-        &__promise {
+        &__desc {
             width: 70%;
             padding-right: 2rem;
         }
         &__image {
             width: 30%;
+        }
+        &__form {
+            padding: 0 2rem;    
+        }
+    }
+    .contact {
+        .section {
+            &__image {
+                width: 40%;
+            }
+            &__desc {
+                width: 60%;
+            }
         }
     }
 }
