--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -52,6 +52,48 @@
     }
 }
 
+.location {
+    @include flex($justify-content: center, $flex-wrap: wrap);
+    width: 100%;
+    &__place {
+        width: 45%;
+        padding: 0.5rem;
+        margin: 0 5% 5% 0;
+        box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.2);
+    }
+    &__store,
+    &__hood {
+        font-weight: bold;
+        line-height: 1.25;
+        font-size: 15px;
+        font-family: 'Alegreya Sans SC', Helvetica, Arial, Lucida, sans-serif;
+    }
+    &__address {
+        line-height: 1.5;
+        padding: 1rem 0;
+        font-size: 0.75rem;
+    }
+    &__hood {
+        &::before {
+            content: "";
+            width: 100%;
+            height: 3px;
+            display: block;
+            margin-bottom: 5px;
+        }
+    }
+    &__hood--green {
+        &::before {
+            background: linear-gradient($linear-gradient-green);
+        }
+    }
+    &__hood--pink {
+        &::before {
+            background: linear-gradient($linear-gradient-pink);
+        }
+    }
+}
+
 .contact-form {
     padding: 2rem 0;
     margin: 2rem 0;
@@ -70,6 +112,7 @@
         outline: none;
         background: none;
         padding: 0.5rem;
+        font-size: 2rem;
 
     }
     &__label {
@@ -93,6 +136,7 @@
         position: relative;
         left: 50%;
         transform: translateX(-50%);
+        cursor: pointer;
     }
 }
 
@@ -170,6 +214,13 @@
         }
         &__form {
             padding: 0 2rem;    
+        }
+    }
+    .location {
+        @include flex($justify-content: flex-start);
+        &__place {
+            width: 30%;
+            margin: 0 3% 3% 0;
         }
     }
     .contact {
