--- a/scss/main.css
+++ b/scss/main.css
@@ -684,6 +684,57 @@ ul {
   text-transform: uppercase;
 }
 
+.location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+
+.location__place {
+  width: 45%;
+  padding: 0.5rem;
+  margin: 0 5% 5% 0;
+  -webkit-box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.2);
+}
+
+.location__store, .location__hood {
+  font-weight: bold;
+  line-height: 1.25;
+  font-size: 15px;
+  font-family: 'Alegreya Sans SC', Helvetica, Arial, Lucida, sans-serif;
+}
+
+.location__address {
+  line-height: 1.5;
+  padding: 1rem 0;
+  font-size: 0.75rem;
+}
+
+.location__hood::before {
+  content: "";
+  width: 100%;
+  height: 3px;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.location__hood--green::before {
+  background: -webkit-gradient(linear, left top, right top, from(#53af5f), to(#d1e26e));
+  background: linear-gradient(90deg, #53af5f 0%, #d1e26e 100%);
+}
+
+.location__hood--pink::before {
+  background: -webkit-gradient(linear, left top, right top, color-stop(3.69%, #a71a63), color-stop(38.59%, #d65197), color-stop(69.31%, #f8c0a6), color-stop(98.89%, #eedc82));
+  background: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
+}
+
 .contact-form {
   padding: 2rem 0;
   margin: 2rem 0;
@@ -706,6 +757,7 @@ ul {
   outline: none;
   background: none;
   padding: 0.5rem;
+  font-size: 2rem;
 }
 
 .contact-form__label {
@@ -733,6 +785,7 @@ ul {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  cursor: pointer;
 }
 
 .story .section__title::before {
@@ -740,7 +793,8 @@ ul {
 }
 
 .story .section__line {
-  background: linear-gradient(143deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(3.69%, #a71a63), color-stop(38.59%, #d65197), color-stop(69.31%, #f8c0a6), color-stop(98.89%, #eedc82));
+  background: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
 }
 
 .find-us .section__title::before {
@@ -748,8 +802,8 @@ ul {
 }
 
 .find-us .section__line {
-  background: -webkit-gradient(linear, left bottom, left top, from(#53af5f), to(#d1e26e));
-  background: linear-gradient(0deg, #53af5f 0%, #d1e26e 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#53af5f), to(#d1e26e));
+  background: linear-gradient(90deg, #53af5f 0%, #d1e26e 100%);
 }
 
 .contact .section__title::before {
@@ -757,8 +811,8 @@ ul {
 }
 
 .contact .section__line {
-  background: -webkit-gradient(linear, left bottom, left top, from(#53af5f), to(#d1e26e));
-  background: linear-gradient(0deg, #53af5f 0%, #d1e26e 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#53af5f), to(#d1e26e));
+  background: linear-gradient(90deg, #53af5f 0%, #d1e26e 100%);
 }
 
 @media (min-width: 768px) {
@@ -804,6 +858,18 @@ ul {
   }
   .section__form {
     padding: 0 2rem;
+  }
+  .location {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .location__place {
+    width: 30%;
+    margin: 0 3% 3% 0;
   }
   .contact .section__image {
     width: 40%;
@@ -985,8 +1051,9 @@ ul {
     display: block;
     content: '';
     border-bottom: 4px solid #a71a63;
-    -o-border-image: linear-gradient(143deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%) 1;
-       border-image: linear-gradient(143deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%) 1;
+    -o-border-image: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%) 1;
+       border-image: -webkit-gradient(linear, left top, right top, color-stop(3.69%, #a71a63), color-stop(38.59%, #d65197), color-stop(69.31%, #f8c0a6), color-stop(98.89%, #eedc82)) 1;
+       border-image: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%) 1;
     -webkit-transform: scaleX(0);
             transform: scaleX(0);
     -webkit-transition: -webkit-transform 250ms ease-in-out;
@@ -1029,7 +1096,8 @@ ul {
     transition: transform 0.5s, -webkit-transform 0.5s;
   }
   .navigation__social-item:hover {
-    background: linear-gradient(143deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(3.69%, #a71a63), color-stop(38.59%, #d65197), color-stop(69.31%, #f8c0a6), color-stop(98.89%, #eedc82));
+    background: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
   }
@@ -1039,6 +1107,73 @@ ul {
   .overlay {
     display: none;
   }
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__wrapper {
+  width: 80%;
+  padding-bottom: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__social-item {
+  border-radius: 50%;
+  padding: 0 1rem;
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.footer__social-item:hover {
+  background: -webkit-gradient(linear, left top, right top, color-stop(3.69%, #a71a63), color-stop(38.59%, #d65197), color-stop(69.31%, #f8c0a6), color-stop(98.89%, #eedc82));
+  background: linear-gradient(90deg, #a71a63 3.69%, #d65197 38.59%, #f8c0a6 69.31%, #eedc82 98.89%);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #fff;
 }
 
 .content {
@@ -1077,5 +1212,47 @@ ul {
 
 .new-line {
   display: block;
+}
+
+.scroll-btn {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  z-index: 9;
+  bottom: 20px;
+  right: 20px;
+  background: rgba(0, 0, 0, 0.4);
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.scroll-btn:hover {
+  background: #000;
+}
+
+.scroll-btn .fas {
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .scroll-btn {
+    width: 60px;
+    height: 60px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
