--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,3 +26,31 @@
 .new-line {
     display: block;
 }
+
+.scroll-btn {
+    visibility: hidden;
+    opacity: 0;
+    position: fixed;
+    z-index: 9;
+    bottom: 20px;
+    right: 20px;
+    background: rgba($black, 0.4);
+    width: 50px;
+    height: 50px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    @include flex($justify-content: center, $align-items: center);
+    transition: opacity 1s;
+    &:hover {
+        background: $black;
+    }
+    .fas {
+        color: $white;
+    }
+    @include md {
+        width: 60px;
+        height: 60px;
+    }
+}
